microservices/k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: jksnu/order-service:latest
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "200m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
