microservices/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: user-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-vs
spec:
  hosts:
    - "*"
  gateways:
    - user-gateway
  http:
    - match:
        - uri:
            prefix: /place-order
      route:
        - destination:
            host: user
            port:
              number: 3001
    - match:
        - uri:
            prefix: /create-order
      route:
        - destination:
            host: order
            port:
              number: 3002
